fix bottom row not fully visible

--- a/src/index.css
+++ b/src/index.css
@@ -17,4 +17,6 @@ code {
 #root {
   height: 100%;
   width: 100%;
+  display: flex;
+  flex-direction: column;
 }
